Wave 4: company-specific interview guides for all 8 academies
Comprehensive interview process guides, LeetCode pattern cheatsheets,
system design cheatsheets, NeetCode/Blind75/Grind75 roadmaps, and
company behavioral guides for:
- Data Structures (COMPANY_INTERVIEW_GUIDE, NEETCODE_ROADMAP, BEHAVIORAL)
- Java (COMPANY_INTERVIEW_GUIDE, LEETCODE_PATTERN, SYSTEM_DESIGN, NEETCODE_ROADMAP, BEHAVIORAL)
- Algorithms (COMPANY_INTERVIEW_GUIDE, LEETCODE_PATTERN, NEETCODE_ROADMAP, BEHAVIORAL)
- Backend (all 5 files, upgraded SYSTEM_DESIGN from 312 to 661 lines)
- Oracle APEX (LEETCODE_PATTERN, SYSTEM_DESIGN, NEETCODE_ROADMAP, BEHAVIORAL)
- Oracle EBS (LEETCODE_PATTERN, SYSTEM_DESIGN, NEETCODE_ROADMAP, BEHAVIORAL)
- Oracle Database (LEETCODE_PATTERN, SYSTEM_DESIGN, NEETCODE_ROADMAP, BEHAVIORAL)
- Real Production Scenarios (COMPANY_INTERVIEW_GUIDE, LEETCODE_PATTERN, SYSTEM_DESIGN, NEETCODE_ROADMAP, BEHAVIORAL)

34 files, ~14,000+ lines of company-tagged content